remove old trip endpoints (get, listMemberOf, listOwnerOf)
