# backend/api/swagger.yaml
@@ -256,77 +256,6 @@ paths:
           description: "Status internal server error"
           schema:
                 $ref: '#/definitions/ErrorInfo'
-  /trips/get:
-    post:
-      summary: READ trip endpoint
-      tags: 
-        - trips
-      description: Get a trip with its associated users and expenses
-      parameters:
-      - in: body
-        name: JSON
-        schema:
-          type: object
-          properties:
-            jwt:
-              type: string
-              description: Authenticated JWT
-            tripId:
-              type: string
-              description: ID of the trip to read
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: object
-            properties:
-              jwt:
-                type: string
-                description: Refreshed JWT
-              leaderId:
-                type: string
-                description: ID of the user that owns the trip
-              name:
-                type: string
-                description: Title of the trip
-              description:
-                type: string
-                description: Miscellaneous description for the trip 
-              inviteCode:
-                type: string
-                description: 6-digit invite code
-              allMembers:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    _id:
-                      type: string
-                    name:
-                      type: string
-                    email:
-                      type: string
-              allExpenses:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    _id:
-                      type: string
-                    name:
-                      type: string
-                    description:
-                      type: string
-                    cost:
-                      type: number
-        "400":
-          description: Malformed request or JSON
-          schema:
-            $ref: '#/definitions/ErrorInfo'
-        "401":
-          description: "Authentication failure, invalid JWT"
-          schema:
-                $ref: '#/definitions/ErrorInfo'
   /trips/update:
     post:
       summary: UPDATE trip endpoint
@@ -402,90 +331,6 @@ paths:
           description: "Authentication failure, invalid JWT"
           schema:
                 $ref: '#/definitions/ErrorInfo'
-  /trips/listMemberOf:
-    post:
-      summary: List trips as member user
-      tags: 
-        - trips
-      description: List trips a user is part of, only shows member (non-leader) trips.
-      parameters:
-      - in: body
-        name: JSON
-        schema:
-          type: object
-          properties:
-            jwt:
-              type: string
-              description: Authenticated JWT
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: object
-            properties:
-              jwt:
-                type: string
-                description: Refreshed JWT
-              trips:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    _id:
-                      type: string
-                      description: ID of the trip, suitable for other /trips/ endpoint calls
-                    name:
-                      type: string
-                      description: Title of the trip
-                    description:
-                      type: string
-                      description: Miscellaneous description for the trip
-        "400":
-          description: Malformed request or JSON
-          schema:
-            $ref: '#/responses/BadRequest'
-  /trips/listOwnerOf:
-    post:
-      summary: List trips owned by user
-      tags: 
-        - trips
-      description: List trips that belong to a user, only shows owned trips where the user is the Leader.
-      parameters:
-      - in: body
-        name: JSON
-        schema:
-          type: object
-          properties:
-            jwt:
-              type: string
-              description: Authenticated JWT
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: object
-            properties:
-              jwt:
-                type: string
-                description: Refreshed JWT
-              trips:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    _id:
-                      type: string
-                      description: ID of the trip, suitable for other /trips/ endpoint calls
-                    name:
-                      type: string
-                      description: Title of the trip
-                    description:
-                      type: string
-                      description: Miscellaneous description for the trip
-        "400":
-          description: Malformed request or JSON
-          schema:
-            $ref: '#/responses/BadRequest'
   /trips/join:
     post:
       summary: Joining trip endpoint
